--- a/envs/simulated_user/simulated_user.yaml
+++ b/envs/simulated_user/simulated_user.yaml
@@ -1,3 +1,3 @@
 train:
-  data_file: /home/ma-user/modelarts/work/jjw/RL-Factory/RL-Factory/envs/simulated_user/user.jsonl
-  user_feedback_prob: 0.5
+  data_file: user.jsonl
+  user_feedback_prob: 0.1
