add chat template

--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -461,6 +461,8 @@ actor_rollout_ref:
   env:
     name: base
     model_type: null
+    load_custom_chat_template: null
+    mmtool: True
     tool_manager: null
     mcp_mode: stdio
     tool_name_selected: []  # selected tools for using when call a sse MCP server; default [] will call all tools
